<?xml version="1.0"?>
<package>
  <name>dwl_lcmtypes</name>
  <version>0.0.1</version>
  <description>LCM types</description>

  <author email="carlos.mastalli@laas.fr">Carlos Mastalli</author>
  <maintainer email="carlos.mastalli@laas.fr">Carlos Mastalli</maintainer>
  <license> BSD 3-Clause</license>

  <url type="website">https://github.com/iit-DLSLab/dwl-distro</url>
  <url type="bugtracker">https://github.com/iit-DLSLab/dwl-distro/issues</url>

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dwl</build_depend>

  <run_depend>dwl</run_depend>
  <run_depend>catkin</run_depend>
</package>
